Deployed the app.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://syedhafi.github.io/",
+  "homepage": "https://syedhafi.github.io/ecommerce_web/",
   "name": "ecom",
   "version": "0.1.0",
   "private": true,
